Adding `Send Friend Invite` feature client-side, refactoring `User Details` fetching logic, and more ...
